--- a/nand2tetris.cabal
+++ b/nand2tetris.cabal
@@ -25,6 +25,8 @@ source-repository head
 
 library
   exposed-modules:
+      HDL.Interpreter
+      HDL.Parser
       Lib
   other-modules:
       Paths_nand2tetris
@@ -32,9 +34,11 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      PyF
+    , base >=4.7 && <5
     , containers
     , directory
+    , filepath
     , megaparsec
     , mtl
     , text
@@ -48,9 +52,11 @@ executable nand2tetris-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      PyF
+    , base >=4.7 && <5
     , containers
     , directory
+    , filepath
     , megaparsec
     , mtl
     , nand2tetris
@@ -66,9 +72,11 @@ test-suite nand2tetris-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      PyF
+    , base >=4.7 && <5
     , containers
     , directory
+    , filepath
     , megaparsec
     , mtl
     , nand2tetris
